fix align and font size

--- a/main.css
+++ b/main.css
@@ -17,6 +17,11 @@ body {
     text-align: left;
     margin:1% 0 0 20%;
 }
+#blogcontent {
+    text-align:left;
+    margin:1% 15% 0 20%;
+    font-size: 14px;
+}
 h1 {
     margin-bottom: 0;
     font-size: 18px;
